Добавляет какие-то фиксы

--- a/laba_6/case_2/index.html
+++ b/laba_6/case_2/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Одноклассники</title>
+    <title>Rap.RU</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
