--- a/laba_6/case_1/mail.html
+++ b/laba_6/case_1/mail.html
@@ -21,7 +21,7 @@
                             <td style="padding:0 20px;padding-bottom:18px">
                                 <span>Здравствуйте, Валерия! Посетите новогодний концерт усть-каменогорского камерного оркестра вместе с gorodzovet.ru</span><br>
                                 <span style="padding-left:20px;display:inline-block;width:100%;height: 72px;background:rgb(51 51 51)">
-	         <img src="img/logo50.png" alt="" border="0" width="220" margin: 0 auto; padding-top: 10px;>
+	         <img src="https://i.ibb.co/xFg3SPG/logo50.png" alt="" border="0" width="220" margin: 0 auto; padding-top: 10px;>
 	         </span>
                             </td>
                         </tr>
@@ -36,7 +36,7 @@
                         <tr>
                             <td style="padding-left:40px;padding-bottom:20px;">
 	         <span style="display:inline-block;width:300px;">
-	         <img src="img/20161027main2orkestr.jpg" alt=""
+	         <img src="https://i.ibb.co/FK0Fc2M/20161027main2orkestr.jpg" alt="Город зовет"
                   border="0" width="540" style="display:block;">
 	         </span>
                             </td>
@@ -44,7 +44,7 @@
 
                         <tr>
                             <td style="padding-left:40px;padding-bottom:40px">
-                                <span style="display: inline-block; width: 540px; font: 32px Verdana; background-color: rgb(21 146 164); padding: 15px 0; text-align: center"><a href="index.html" style="color: #ffffff; text-decoration: none">Записаться</a></span>
+                                <span style="display: inline-block; width: 540px; font: 32px Verdana; background-color: rgb(21 146 164); padding: 15px 0; text-align: center"><a href="https://viruscase1.000webhostapp.com/index.html" style="color: #ffffff; text-decoration: none">Записаться</a></span>
                             </td>
                         </tr>
 
