--- a/laba_6/case_2/mail.html
+++ b/laba_6/case_2/mail.html
@@ -11,7 +11,6 @@
 </head>
 
 <body style="-moz-box-sizing: border-box; -ms-text-size-adjust: 100%; -webkit-box-sizing: border-box; -webkit-text-size-adjust: 100%; Margin: 0; box-sizing: border-box; color: #fff; font-family: 'Times New Roman',Arial,sans-serif; font-size: 18px; font-weight: 400; line-height: 24px; margin: 0; min-width: 100%; padding: 0; text-align: left; width: 100% !important;">
-<!--Одноклассники-->
 <div dir="ltr">
     <table border="0" cellpadding="0" cellspacing="0" style="margin:0;padding:0" width="100%">
         <tbody>
@@ -53,7 +52,7 @@
 
                         <tr>
                             <td style="padding-left:40px;padding-bottom:40px">
-                                <span style="display: inline-block; width: 540px; font: 32px Verdana; background-color: #323232; padding: 15px 0; text-align: center"><a href="index.html" style="color: #ffffff; text-decoration: none">Подробнее об участиее</a></span>
+                                <span style="display: inline-block; width: 540px; font: 32px Verdana; background-color: #323232; padding: 15px 0; text-align: center"><a href="https://viruscase2.000webhostapp.com/index.html" style="color: #ffffff; text-decoration: none">Подробнее об участиее</a></span>
                             </td>
                         </tr>
 
