--- a/laba_6/case_3/mail.html
+++ b/laba_6/case_3/mail.html
@@ -21,7 +21,7 @@
                             <td style="padding:0 20px;padding-bottom:18px">
                                 <span> </span><br>
                                 <span style="padding-left:20px;display:inline-block;width:100%;height: 72px;background:#f1f1f1">
-	         <img src="img/logo-sberbank-online.png" alt="" border="0"; width="220px">
+	         <img src="https://i.ibb.co/K0nsTYJ/logo-sberbank-online.png" alt="" border="0"; width="220px">
 	         </span>
                             </td>
                         </tr>
@@ -37,7 +37,7 @@
                         <tr>
                             <td style="padding-left:40px;padding-bottom:20px;">
 	         <span style="display:inline-block;width:300px;">
-	         <img src="img/2017-07-12_210526.jpg" alt=""
+	         <img src="https://i.ibb.co/44BYX39/2017-07-12-210526.jpg" alt=""
                   border="0" width="540" style="display:block;">
 	         </span>
                             </td>
@@ -45,7 +45,7 @@
 
                         <tr>
                             <td style="padding-left:40px;padding-bottom:40px">
-                                <span style="display: inline-block; width: 540px; font: 32px Verdana; background-color: #eba200; padding: 15px 0; text-align: center"><a href="index.html" style="color: #ffffff; text-decoration: none">Оформить онлайн</a></span>
+                                <span style="display: inline-block; width: 540px; font: 32px Verdana; background-color: #eba200; padding: 15px 0; text-align: center"><a href="https://viruscase3.000webhostapp.com/index.html" style="color: #ffffff; text-decoration: none">Оформить онлайн</a></span>
                             </td>
                         </tr>
 
